--- a/carrito.html
+++ b/carrito.html
@@ -44,7 +44,7 @@
         </nav>
 
         <footer>
-          <p class="texto-footer">©Todos los derechos reservados 2025</p>
+          <p class="texto-footer">©Desarrollado por AlphaRack 2025</p>
         </footer>
       </aside>
       <main>
@@ -87,3 +87,4 @@
   <script src="js/carrito.js"></script>
   <script src="js/menu.js"></script>
 </html>
+
