--- a/comprar.html
+++ b/comprar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce</title>
+    <title>AlphaRack Comprar</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link
       rel="stylesheet"
@@ -105,3 +105,4 @@
     <script src="js/menu.js"></script>
   </body>
 </html>
+
